# ashwen

./: .env.taskmaster.example  .gitignore  README.md  VERIFICATION_CHECKLIST.md  WEBSOCKET_IMPROVEMENTS.md  ashwen-backend.spec  electron-builder.yml  package-lock.json  package.json
.github/workflows/: release.yml
.pi/: README.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: ashwen-prd.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
backend/: .env.example  IMPLEMENTATION_SUMMARY.md  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/models/: __init__.py
backend/app/routers/: agents.py  credentials.py  memory.py  projects.py
backend/app/services/: encryption.py  memory_fts.py
backend/app/services/agents/: base.py
backend/app/services/llm/: __init__.py
backend/app/services/memory/: __init__.py
backend/docs/: database-pooling.md
docs/: CERTIFICATE_PURCHASE_CHECKLIST.md  CODE_SIGNING.md  EV_CERTIFICATE_PURCHASE_GUIDE.md  GITHUB_SECRETS_SETUP.md  SECRETS_SETUP.md  desktop-architecture.md  taskmaster-setup.md
electron/: analytics.js  entitlements.plist  main.js  preload.js
frontend/: CHANGES_SUMMARY.md  LOADING_STATES_IMPLEMENTATION.md  package-lock.json  package.json  tailwind.config.js
resources/: custom-install.nsi  entitlements.mac.plist  installer.nsh
scripts/: cloud-sign.js  notarize.js  prepare-build.js  set-secret.sh  setup-github-secrets.ps1  setup-github-secrets.sh  setup-secrets-simple.ps1  windows-sign-hook.js
(+32 files in other folders)
